attempt 7 at fixing z-index safari bug

--- a/src/components/synopsis.module.css
+++ b/src/components/synopsis.module.css
@@ -5,7 +5,7 @@
 
 .synBackground::after {
     content: '';
-    position: absolute;
+    position: fixed;
     top: 0;
     width: 100%;
     height: 50%;
@@ -21,7 +21,7 @@
     /* * push down the wrapper by half the page*/
     margin: 50% 0 0 0;
     position: relative;
-    z-index: 5;
+    z-index: 2;
 }
 
 
@@ -47,6 +47,7 @@
     text-align: justify;
     position: relative;
     animation: scroll 130s linear forwards;
+    z-index: 5;
 }
 
 
